--- a/src/css/games/dinogenics.less
+++ b/src/css/games/dinogenics.less
@@ -32,6 +32,12 @@ html[data-theme=dark] {
 		color: var(--blue-80);
 	}
 
+	#above_board .instructions>*,
+	#iom_container .instructions>* {
+		background: var(--dark-back);
+		color: var(--light-80);
+	}
+
 	#main_board,
 	.player_island {
 		filter: brightness(0.9);
