--- a/src/css/games/revive.less
+++ b/src/css/games/revive.less
@@ -16,6 +16,15 @@ html[data-theme=dark] {
 		filter: var(--highlight-min);
 	}
 
+	#infoBox div {
+		background-color: var(--dark-10);
+		color: var(--light-80);
+	}
+
+	#player_boards div:has(> .location) {
+		filter: var(--drop-shadow-min);
+	}
+
 	.card {
 		filter: brightness(0.9);
 	}
